--- a/crystal-cave/pages/about/index.html
+++ b/crystal-cave/pages/about/index.html
@@ -29,23 +29,38 @@
         </ul>
      </nav>
     </header>
+
     <div class="iets">
         <!-- 1 -->
         <div class="titel">
           <h1>About Me</h1>
         </div>
 
-        <!-- mobile first = 2 --> <!-- desktop = 3 -->
+        <!-- rij 2, kolom 1 -->
         <div class="overmij">
           <p>Hey! Hallo! Mijn naam is Carolien, maker van Crystal Cave. Ik ben 21, geboren op 1 april 2002. En ik ben student Grafische en Digitale Media op AP in Antwerpen.<br><br>
-          Wie mij kent zou mij omschrijven als een spontane avonturier, een beetje een feestbeest, een zorgzame vriendin en een echte dierenvriend. Ik heb namelijk 6 konijnen, 5 kippen, 2 dwergpapegaaien, 2 hamsters, 2 schildpadden en een klein aquariumpje met wat vissen en garnalen. (Sommige van deze zal je ook misschien in mijn prototype spotten)</p>
+          Wie mij kent zou mij omschrijven als een spontane avonturier, een beetje een feestbeest, een zorgzame vriendin en een echte dierenvriend. Ik heb namelijk 6 konijnen, 5 kippen, 2 dwergpapegaaien, 2 hamsters, 2 schildpadden en een klein aquariumpje met wat vissen en garnalen. (Sommige van deze zal je ook misschien in mijn prototype spotten).</p>
         </div>
-</div>
-         <!-- mobile first = 3 --> <!-- desktop = 2 -->
+
+        <div class="titelinfo">
+          <h3> Contact Info </h3>
+        </div>
+
+        <div class="info">
+          <h4>GSM:</h4> <p> 0496 21 15 44 </p>
+          <h4>E-mail:</h4> <p> carolien.syroit@gmail.com </p>
+          <h4>Woonplaats</h4> <p> Oud-Turnhout </p>
+
+          <div class="portfolio">
+             <a class="linkport" href="https://www.behance.net/caroliensyroit">Portfolio</a>
+          </div>
+        </div>
+
+         <!-- rij 3, kolom 1-2 -->
         <div class="me">
           <img class="mefoto" src="../../foto/me.png" alt="collage van foto's over mezelf">
         </div>
-
+</div>
         <footer>
           <div class="bach">
             <p>Bachelorproef</p>
