--- a/crystal-cave/pages/home/index.html
+++ b/crystal-cave/pages/home/index.html
@@ -73,7 +73,7 @@
 
 <!-- mobile first = 7 --> <!-- desktop = 6 -->
    <div class="opbouwfoto">
-     <img class="opbouwfoto" src="naam.extensie" alt="next">
+     <img class="opbouwmockup" src="../../foto/opbouw.png" alt="mockup van de opbouw van de website">
    </div>
 </div>
 
@@ -124,15 +124,15 @@
 
 
 
-
+<div class="allprototype">
 <div class="protoprobeer">
   <h1>Probeer zelf het prototype uit!</h1>
 </div>
 
-<div class="prototype">  <a href="">Link</a>
+<div class="prototype">  <a class="linkproto" href="https://www.figma.com/proto/DeK09Fr4fmNSKnCd56wlbM/Final?page-id=0%3A1&type=design&node-id=1-8043&viewport=520%2C276%2C0.05&t=lOyeMtwtVI304qHa-1&scaling=scale-down&starting-point-node-id=1%3A8043&mode=design">Prototype</a>
 </div>
 
-<div class="fotoprototype">
+
   <img class="prototypevolledig" src="../../foto/fullprototype.png">
 </div>
 </main>
